--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding-top: 800px;
     text-align: center;
-    background-color: chartreuse;
 }
 
 .profile {
@@ -21,7 +20,7 @@ body {
     top: 0;
     bottom: 0;
     opacity: 0.83;
-    background: linear-gradient(#FFFFFF 0%, #231ddb 100%);
+    background: linear-gradient(#33ebff 0%, #231ddb 100%);
     display: table;
     width: 100%;
     height: 100%;
@@ -110,5 +109,12 @@ p {
     line-height: 1.2;
     font-family: 'Cinzel Decorative', cursive;
 }
-
-
+a{
+    text-decoration: none;
+}
+.article:hover{
+    color: forestgreen;
+}
+html{
+    scroll-behavior: smooth;
+}
